--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,28 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family:"STARWARS";
+  src:url("STARWARS.eot?") format("eot"),
+  url("STARWARS.woff") format("woff"),
+  url("STARWARS.ttf") format("truetype"),
+  url("STARWARS.svg#STARWARS") format("svg");
+  font-weight:normal;
+  font-style:normal;}
+
 body {
-background-color: black;
+  /*background-color: black;*/
+  background-image: url('../images/starwars.jpg');
+  background-repeat: no-repeat;
+  background-position: right top;
+  background-attachment: fixed;
+  background-color: black;
+  color:white;
+  font-family: 'STARWARS';
 }
+
+
+
 
 header {
   color: white;
@@ -17,26 +36,36 @@ header {
 .container {
   width:100%;
   max-width: 960px;
-  background-color: green;
   margin:0px auto;
   height: 100%
 }
 
 #main-container {
-  background-color: blue;
+  background: rgba(0, 0, 0, 0.4);
   height:auto;
   width:100%;
   margin-top: 10px;
+  border-radius: 10px;
 }
-
+.shadow {
+  background: rgba(0, 0, 0, 0.4);
+  padding-top:10px;
+  padding-bottom: 10px;
+  border-radius: 10px;
+  margin-left: 20px;
+  margin-right:20px;
+}
 #enemies-container {
-  background-color: orange;
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
   height:200px;
   width:100%;
   margin-top: 10px;
 }
+
 #arena  {
-  background-color: red;
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
   height:200px;
   width:100%;
   margin-top: 10px;
@@ -54,9 +83,29 @@ header {
 .label {
   margin:20px;
   padding-bottom: 20px;
-  background-color: yellow;
+  /*background-color: yellow;*/
 }
 
 .label-container {
   width:100%;
 }
+
+.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+ }
+
+ @keyframes flash {
+    0%, 50%, 100% {
+       opacity: 1;
+    }
+    25%, 75% {
+       opacity: 0;
+    }
+ }
+
+ .flash {
+    animation-name: flash;
+ }
