--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
 * {
   box-sizing: border-box;
 }
-
+h1 {
+  font-size: 2em;
+}
 @font-face {
   font-family:"STARWARS";
   src:url("STARWARS.eot?") format("eot"),
@@ -9,7 +11,8 @@
   url("STARWARS.ttf") format("truetype"),
   url("STARWARS.svg#STARWARS") format("svg");
   font-weight:normal;
-  font-style:normal;}
+  font-style:normal;
+}
 
 body {
   /*background-color: black;*/
@@ -21,9 +24,6 @@ body {
   color:white;
   font-family: 'STARWARS';
 }
-
-
-
 
 header {
   color: white;
@@ -47,6 +47,7 @@ header {
   margin-top: 10px;
   border-radius: 10px;
 }
+
 .shadow {
   background: rgba(0, 0, 0, 0.4);
   padding-top:10px;
@@ -55,6 +56,7 @@ header {
   margin-left: 20px;
   margin-right:20px;
 }
+
 #enemies-container {
   background: rgba(0, 0, 0, 0.4);
   border-radius: 10px;
@@ -77,7 +79,14 @@ header {
   border: black dashed 2px;
   display: inline-block;
   margin: 20px;
-  overflow: hidden;
+  position: relative;
+}
+
+.ap {
+  position:absolute;
+  bottom:0;
+  left:20px;
+  text-align: center;
 }
 
 .label {
